--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafid's Company</title>
 
     <!-- CSS External -->
      <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+
+    <!--Header Content-->
+    <header class="main-header">
+
+        <!--Logo-->
+        <div class="main-logo"></div>
+
+        <!--Navigation-->
+        <nav>
+            <a href="#home-section">Home</a>
+            <a href="#our-profile-section">Our Profile</a>
+            <a href="#portfolio-section">Portfolio</a>
+            <a href="#message-section">Message</a>
+        </nav>
+
+    </header>
+
+
+    <!--Main Content-->
+    <main>
+
+        <!--Home Section-->
+        <section id="home-section">
+            <header>
+                <h2>Hi _, Welcome to my website!</h2>
+            </header>
+
+            <!--Banner Content*-->
+            <div class="banner-image"></div>
+
+        </section>
+
+        <!--Our Profile Section-->
+        <section id="our-profile-section"></section>
+
+        <!--Portfolio Section-->
+        <section id="portfolio-section"></section>
+
+        <!--Message Section-->
+        <section id="message-section"></section>
+
+    </main>
+
+    <hr>
+
+    <!--Footer Content-->
+    <footer>
+        <span>Made by Rafid @2025</span>
+    </footer>
+
+
 </body>
 </html>
