--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rafid's Company</title>
 
     <!-- CSS External -->
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -29,20 +29,30 @@
 
     </header>
 
+    <br>
+    <hr>
+    <br>
+
 
     <!--Main Content-->
     <main>
 
         <!--Home Section-->
         <section id="home-section">
+            
             <header>
-                <h2>Hi _, Welcome to my website!</h2>
+                <h1>Hi _,</h1>
+                <h2>Welcome to my website!</h2>
             </header>
 
             <!--Banner Content*-->
             <div class="banner-image"></div>
 
         </section>
+
+        <br>
+        <hr>
+        <br>
 
         <!--Our Profile Section-->
         <section id="our-profile-section"></section>
@@ -55,11 +65,19 @@
 
     </main>
 
+    <br>
     <hr>
+    <br>
 
     <!--Footer Content-->
     <footer>
-        <span>Made by Rafid @2025</span>
+
+        <span>
+            Made by Rafid MI
+            <br>
+            Copyright @2025
+        </span>
+        
     </footer>
 
 
