--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <!--Banner Content*-->
             <div class="banner-image"></div>
 
+            <!-- Banner Text-->
+             <article>
+
+                <p style="font-size: 18px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur ullam iste quo vero itaque. Impedit neque est asperiores rem. Culpa consequatur a inventore sit distinctio enim aliquam placeat recusandae deleniti?</p>
+
+             </article>
+
         </section>
 
         <br>
