--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <img class="slide" src="assets/images/forest-seen-from-mountain.jpg" alt="Image #2">
                     <img class="slide" src="assets/images/wooden-terrace-beautiful-yellow-flower-field-mountain-blue-sky-landscape.jpg" alt="Image #3">
                 </div>
+
                 <button class="prev" onclick="prevSlide()">&#10094</button>
                 <button class="next" onclick="nextSlide()">&#10095</button>
             </div>
@@ -102,7 +103,7 @@
 
             <h1>Message Us</h1>
 
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="" method="POST" enctype="multipart/form-data">
 
                 <ul style="list-style-type: none;">
                     <li>
@@ -136,14 +137,14 @@
                     <li>
                         <label for="comment">Comment:</label>
                         <br>
-                        <textarea placeholder="Ketik pesan disini." id="comment" rows="3" cols="25"></textarea>
+                        <textarea placeholder="Ketik pesan disini" id="comment" rows="3" cols="25"></textarea>
                     </li>
 
                     <br>
 
                     <li>
                         <input type="submit">
-                <input type="reset">
+                        <input type="reset">
                     </li>
 
                 </ul>
@@ -168,6 +169,8 @@
         </span>
         
     </footer>
+
+    <script src="js/script.js"></script>
 
 
 </body>
